@startuml Temp

class GameStore
{
	- StockProduct
}

class StockProduct
{
	- Product
	- list_product_item
}

class Product
{
	- product_id
	- name
	- price
}

class ProductItem
{
	- Product
	- serial_number
}

GameStore o-- StockProduct

StockProduct --> Product
StockProduct o-- ProductItem

ProductItem --> Product

@enduml